--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="home">Home</string>
+    <string name="loading_text">Loading ..</string>
+    <string name="action_test">Test</string>
 </resources>
